--- a/src/App.css
+++ b/src/App.css
@@ -113,7 +113,7 @@ column-gap: 32px;
  height: auto;
  margin-bottom: 32px;
  animation: reveal linear both;
-animation-timeline:view() ;
+animation-timeline:view() !important;
 animation-range: entry 20% cover 30%;
 }
 
