--- a/src/App.css
+++ b/src/App.css
@@ -113,8 +113,8 @@ column-gap: 32px;
  height: auto;
  margin-bottom: 32px;
  animation: reveal linear both;
-animation-timeline:view() !important;
-animation-range: entry 2% cover 10%;
+animation-timeline:view();
+animation-range: entry 20% cover 30%;
 }
 
 .imagen{
