--- a/src/App.css
+++ b/src/App.css
@@ -121,7 +121,7 @@ column-gap: 32px;
   border-radius:10px ;
   
   animation: reveal linear both;
-animation-timeline:view() ;
+animation-timeline:view() !important;
 animation-range: entry 2% cover 10%;
 
 }
