--- a/src/App.css
+++ b/src/App.css
@@ -103,7 +103,7 @@
   border-radius: 50px;
   
 }
-.profile{
+/* .profile{
   text-align: center;
 }
 .profile img{
@@ -114,7 +114,7 @@ text-align: center;
 }
 .profile h2{
   font-size:1.1rem;
-}
+} */
 .imagenes{
 
 columns: 3;
@@ -308,13 +308,13 @@ transition: .3s ease-in-out;
  .inputsubmit{
   margin: 10px;
  }
- .profile img{
+ /* .profile img{
   width: 155px;
   height: 155px;
  }
  .profile h2{
   font-size:1.5rem;
-}
+} */
 }
 @media(hover:hover){
   .buttonPage:hover{
