--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,29 @@
-.App{
+.App {
   width: 100%;
   margin: auto;
-  
+
 }
-.filters{
+
+@keyframes scroll-watcher {
+  to {
+    scale: 1 1
+  }
+}
+
+.scroll-watcher {
+  height: 15px;
+  position: fixed;
+  top: 0;
+  z-index: 1000;
+  background-color: #262626;
+  width: 100%;
+  scale: 0 1;
+  transform-origin: left;
+  animation: scroll-watcher linear;
+  animation-timeline: scroll(block) !important;
+}
+
+.filters {
   display: flex;
   height: 100%;
   width: 100%;
@@ -11,7 +31,8 @@
   justify-content: space-between;
   align-items: center;
 }
-.filters div{
+
+.filters div {
   font-size: 1.2rem;
   color: #aaa;
   padding: 20px;
@@ -27,6 +48,7 @@
   font-weight: 600;
   transition: .5s;
   z-index: 1;
+
   &:before {
     content: '';
     position: absolute;
@@ -40,6 +62,7 @@
     opacity: 0;
     transition: .3s;
   }
+
   &:after {
     content: '';
     position: absolute;
@@ -53,94 +76,97 @@
     transition: .3s;
     z-index: -1;
   }
+
   &:hover {
     color: #fff;
+
     &:before {
       transform: scaleY(1);
       opacity: 1;
     }
+
     &:after {
       transform: scaleY(1);
       opacity: 1;
     }
   }
 }
-.filters div:hover{
-  
+
+.filters div:hover {
+
   color: #000;
   margin-top: -10px;
   transition: 1s;
-  
-}
-.logoimg{
- width: 90px;
- height: 80px;
 
 }
-.search{
+
+.logoimg {
+  width: 90px;
+  height: 80px;
+
+}
+
+.search {
   display: flex;
-  
+
   align-items: center;
-  
+
 
 }
- .inputsearch{
+
+.inputsearch {
   width: 70%;
   height: 30px;
   padding: 10px;
   border: none;
   border-radius: 50px;
-  margin: 5px ;
+  margin: 5px;
   background-color: #eee;
   font-size: 1.2rem;
-  
+
 
 }
-.inputsubmit{
+
+.inputsearch:focus {
+  outline: 1px solid #262626;
+  box-shadow: 0 0 10px #262626;
+}
+
+.inputsubmit {
   border: none;
   padding: 15px;
   font-size: 1.5rem;
   border-radius: 50px;
-  
-}
-/* .profile{
-  text-align: center;
-}
-.profile img{
-  width: 90px;
-  height: 80px;
-  border-radius:50% ;
-text-align: center;
-}
-.profile h2{
-  font-size:1.1rem;
-} */
-.imagenes{
-
-columns: 3;
-padding: 16px;
-column-gap: 32px;
-}
-
-.imageContainer{
- border-radius: 4px;
- width:auto;
- height: auto;
- margin-bottom: 32px;
+  cursor: pointer;
 
 }
 
-.imagen{
+.imagenes {
+
+  columns: 3;
+  padding: 16px;
+  column-gap: 32px;
+}
+
+.imageContainer {
+  border-radius: 4px;
+  width: auto;
+  height: auto;
+  margin-bottom: 32px;
+
+}
+
+.imagen {
   width: 100%;
   height: 100%;
-  border-radius:10px ;
-  
+  border-radius: 10px;
+
 
 
 }
 
-.buttonDowload{
- 
+.buttonDowload {
+
   text-align: center;
   display: flex;
   justify-content: center;
@@ -154,88 +180,93 @@ column-gap: 32px;
   padding: auto;
   margin: 20px;
   border-radius: 20px;
-  cursor:pointer;
-  
-  
+  cursor: pointer;
+
+
 }
-.ContainbuttonPage{
- 
+
+.ContainbuttonPage {
+
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.buttonPagereverse{
+.buttonPagereverse {
   width: 100%;
   padding: 20px;
-  
+
   margin: 5px;
   border: none;
-   border-radius: 50px;
+  border-radius: 50px;
 
   background: #aaa;
   cursor: pointer;
-  
+
   font-size: 1.5rem;
   position: relative;
   overflow: hidden;
 }
-.buttonPagereverse span{
+
+.buttonPagereverse span {
   position: relative;
   z-index: 2;
   transition: .3s ease all;
-  
- }
- .buttonPagereverse::after{
-  content: '';
-  width: 100%;
-  
- 
-  position: absolute; 
-  z-index: 1;
-top: 0;
-right: calc(-100% - 80px);
 
-border-top: 70px solid red;
-border-left: 70px solid transparent;
-transition: .3s ease-in-out;
 }
 
-.buttonPage{
+.buttonPagereverse::after {
+  content: '';
+  width: 100%;
+
+
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  right: calc(-100% - 80px);
+
+  border-top: 70px solid red;
+  border-left: 70px solid transparent;
+  transition: .3s ease-in-out;
+}
+
+.buttonPage {
   width: 100%;
   padding: 20px;
-  
+
   margin: 5px;
   border: none;
-   border-radius: 50px;
+  border-radius: 50px;
 
   background: #aaa;
   cursor: pointer;
-  
+
   font-size: 1.5rem;
   position: relative;
   overflow: hidden;
- 
+
 }
-.buttonPage span{
- position: relative;
- z-index: 2;
- transition: .3s ease all;
- 
+
+.buttonPage span {
+  position: relative;
+  z-index: 2;
+  transition: .3s ease all;
+
 }
-.buttonPage::after{
+
+.buttonPage::after {
   content: '';
   width: 100%;
-  
- 
-  position: absolute; 
-  z-index: 1;
-top: 0;
-left: calc(-100% - 80px);
 
-border-bottom: 70px solid rgb(0, 102, 255);
-border-right: 70px solid transparent;
-transition: .3s ease-in-out;
+
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: calc(-100% - 80px);
+
+  border-bottom: 70px solid rgb(0, 102, 255);
+  border-right: 70px solid transparent;
+  transition: .3s ease-in-out;
 }
 
 /* .buttonPage:active{
@@ -247,35 +278,47 @@ transition: .3s ease-in-out;
   cursor: pointer;
 
 } */
-.footer{
-  background:#262626;
+
+
+.spanGoogle{
+ margin: 10px;
+
+ }
+
+
+.footer {
+  background: #262626;
 
   width: 100%;
   min-height: 100px;
   position: relative;
- 
+
 
 }
-.subfooter{
+
+.subfooter {
   text-align: center;
-  
+
 }
-.subfooter h2{
+
+.subfooter h2 {
   font-size: 3rem;
   color: #fff;
-  
+
 }
-.redes{ 
+
+.redes {
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.redes li{
+
+.redes li {
   list-style: none;
 }
 
-.redes li a{
+.redes li a {
   font-size: 3rem;
   color: #fff;
   margin: 0 10px;
@@ -284,31 +327,105 @@ transition: .3s ease-in-out;
   margin: 10px;
 }
 
-.copyright{
+.copyright {
 
   font-size: 2rem;
   background: #000;
   color: #fff;
   text-align: center;
   margin: 0;
+
+}
+
+.loginContainer {
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+
+  border-radius: 10px;
+}
+
+.loginContainer img {
+  border-radius: 50%;
+  height: 120px;
+  width: 120px;
+  margin: 0 auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.loginform {
+  height: 100%;
+  display: block;
+  text-align: center;
+
+}
+
+.accountquestion {
+  font-size: 1.1rem;
+  color: gray;
+}
+
+.register {
+background: #000;
+color: #fff;
+  padding: 20px;
+
+  margin: 5px;
+  border: none;
+  border-radius: 50px;
+
  
+  cursor: pointer;
+
+  font-size: 1.5rem;
+  position: relative;
+  overflow: hidden;
+
+}
+.register span{
+  position: relative;
+  z-index: 2;
+  transition: .3s ease all;
+}
+.register::after {
+  content: '';
+  width: 1px;
+  height: 1px;
+
+background:none;
+  position: absolute;
+  z-index: 1;
+  top: 50%;
+  left:50% ;
+ 
+/* 
+  border-bottom: 70px solid rgb(0, 102, 255);
+  border-right: 70px solid transparent; */
+  transition: .3s ease-in-out;
 }
 
 
 @media (max-width:900px) {
- .imagenes{
-  columns:1;
- }
- .filters{
-  flex-direction: column;
- }
- .search{
-  flex-direction: column;
- }
- .inputsubmit{
-  margin: 10px;
- }
- /* .profile img{
+  .imagenes {
+    columns: 1;
+  }
+
+  .filters {
+    flex-direction: column;
+  }
+
+  .search {
+    flex-direction: column;
+  }
+
+  .inputsubmit {
+    margin: 10px;
+  }
+
+  /* .profile img{
   width: 155px;
   height: 155px;
  }
@@ -316,32 +433,40 @@ transition: .3s ease-in-out;
   font-size:1.5rem;
 } */
 }
-@media(hover:hover){
-  .buttonPage:hover{
+
+@media(hover:hover) {
+  .buttonPage:hover {
     color: #fff;
     transition: 1s;
   }
-  .buttonPage:hover::after{
-    left: 0;
-   
-   
-   transition: 1s;
-   
-    cursor: pointer;
+
+  .buttonPage:hover::after {
+    top: 0;
   }
-  .buttonPagereverse:hover{
-    color:#fff;
+
+
+  .register:hover::after {
+    transform: scale(400);
+    background: #f00;
+    transition: 2s;
+    color: #fff;
   }
-  .buttonPagereverse:hover::after{
+
+  .buttonPagereverse:hover {
+    color: #fff;
+  }
+
+  .buttonPagereverse:hover::after {
     right: 0;
-   
-   
-   transition: 1s;
-   
+
+
+    transition: 1s;
+
     cursor: pointer;
   }
-  .redes li a:hover{
+
+  .redes li a:hover {
     transform: translateY(-10px);
-    }
+  }
 
 }
